assignment_2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    CHAN
    COND
    COM
    FALLTHROUGH

Grammar

Rule 0     S' -> SourceFile
Rule 1     SourceFile -> PackageClause SEMICOLON ImportDeclList TopLevelDeclList
Rule 2     SourceFile -> PackageClause SEMICOLON TopLevelDeclList
Rule 3     PackageClause -> PACKAGE ID
Rule 4     ImportDeclList -> ImportDeclList ImportDecl SEMICOLON
Rule 5     ImportDeclList -> ImportDecl SEMICOLON
Rule 6     ImportDecl -> IMPORT LPAREN ImportSpecList RPAREN
Rule 7     ImportDecl -> IMPORT LPAREN RPAREN
Rule 8     ImportDecl -> IMPORT ImportSpec
Rule 9     ImportSpecList -> ImportSpecList ImportSpec SEMICOLON
Rule 10    ImportSpecList -> ImportSpec SEMICOLON
Rule 11    ImportSpec -> ID ImportPath
Rule 12    ImportSpec -> PERIOD ImportPath
Rule 13    ImportSpec -> ImportPath
Rule 14    ImportPath -> STRING
Rule 15    Block -> LBRACE OPENB StatementList CLOSEB RBRACE
Rule 16    OPENB -> <empty>
Rule 17    CLOSEB -> <empty>
Rule 18    BrkBlk -> <empty>
Rule 19    BrkBlkEnd -> <empty>
Rule 20    StatementList -> StatementList Statement SEMICOLON
Rule 21    StatementList -> Statement SEMICOLON
Rule 22    Statement -> Declaration
Rule 23    Statement -> DeferStmt
Rule 24    Statement -> LabeledStmt
Rule 25    Statement -> SimpleStmt
Rule 26    Statement -> ReturnStmt
Rule 27    Statement -> BreakStmt
Rule 28    Statement -> ContinueStmt
Rule 29    Statement -> GotoStmt
Rule 30    Statement -> Block
Rule 31    Statement -> GoStmt
Rule 32    Statement -> IfStmt
Rule 33    Statement -> SelectStmt
Rule 34    Statement -> SwitchStmt
Rule 35    Statement -> ForStmt
Rule 36    DeferStmt -> DEFER Expression
Rule 37    SimpleStmt -> EmptyStmt
Rule 38    SimpleStmt -> ExpressionStmt
Rule 39    SimpleStmt -> IncDecStmt
Rule 40    SimpleStmt -> ShortVarDecl
Rule 41    SimpleStmt -> Assignment
Rule 42    Assignment -> ExpressionList assign_op ExpressionList
Rule 43    EmptyStmt -> <empty>
Rule 44    ExpressionStmt -> Expression
Rule 45    GoStmt -> GO Expression
Rule 46    IncDecStmt -> Expression INC
Rule 47    IncDecStmt -> Expression DEC
Rule 48    ShortVarDecl -> IdentifierList DEFINE ExpressionList
Rule 49    VarDecl -> VAR VarSpec
Rule 50    VarSpec -> IdentifierList Type
Rule 51    VarSpec -> IdentifierList Type assign_op ExpressionList
Rule 52    VarSpec -> IdentifierList assign_op ExpressionList
Rule 53    Declaration -> TypeDecl
Rule 54    Declaration -> VarDecl
Rule 55    FunctionDecl -> FUNC ID OPENB Signature CLOSEB
Rule 56    FunctionDecl -> FUNC ID OPENB Signature Block CLOSEB
Rule 57    Signature -> Parameters
Rule 58    Signature -> Parameters Result
Rule 59    Result -> Parameters
Rule 60    Result -> Type
Rule 61    Parameters -> LPAREN RPAREN
Rule 62    Parameters -> LPAREN ParameterList RPAREN
Rule 63    Parameters -> LPAREN ParameterList COMMA RPAREN
Rule 64    ParameterList -> ParameterDecl
Rule 65    ParameterList -> ParameterList COMMA ParameterDecl
Rule 66    ParameterDecl -> IdentifierList Type
Rule 67    ParameterDecl -> IdentifierList ELLIPSIS Type
Rule 68    ParameterDecl -> ELLIPSIS Type
Rule 69    IdentifierList -> ID
Rule 70    IdentifierList -> IdentifierList COMMA ID
Rule 71    MethodDecl -> FUNC Receiver ID Signature
Rule 72    MethodDecl -> FUNC Receiver ID Signature Block
Rule 73    Receiver -> Parameters
Rule 74    TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON
Rule 75    TopLevelDeclList -> TopLevelDecl SEMICOLON
Rule 76    Type -> LiteralType
Rule 77    Type -> ID
Rule 78    Type -> ID PERIOD ID
Rule 79    Type -> VARTYPE
Rule 80    SliceType -> LBRACK RBRACK Type
Rule 81    TopLevelDecl -> Declaration
Rule 82    TopLevelDecl -> FunctionDecl
Rule 83    TopLevelDecl -> MethodDecl
Rule 84    LabeledStmt -> ID COLON Statement
Rule 85    ReturnStmt -> RETURN
Rule 86    ReturnStmt -> RETURN ExpressionList
Rule 87    BreakStmt -> BREAK
Rule 88    BreakStmt -> BREAK ID
Rule 89    ContinueStmt -> CONTINUE
Rule 90    ContinueStmt -> CONTINUE ID
Rule 91    IfStmt -> IF OPENB Expression Block CLOSEB
Rule 92    IfStmt -> IF OPENB SimpleStmt SEMICOLON Expression Block CLOSEB
Rule 93    IfStmt -> IF OPENB Expression Block ELSE Block CLOSEB
Rule 94    IfStmt -> IF OPENB Expression Block ELSE IfStmt CLOSEB
Rule 95    IfStmt -> IF OPENB SimpleStmt SEMICOLON Expression Block ELSE IfStmt CLOSEB
Rule 96    IfStmt -> IF OPENB SimpleStmt SEMICOLON Expression Block ELSE Block CLOSEB
Rule 97    EmptyExpr -> <empty>
Rule 98    Empty -> <empty>
Rule 99    SwitchStmt -> ExprSwitchStmt
Rule 100   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON Expression LBRACE ExprCaseClauseList RBRACE
Rule 101   ExprSwitchStmt -> SWITCH Expression LBRACE ExprCaseClauseList RBRACE
Rule 102   ExprCaseClauseList -> <empty>
Rule 103   ExprCaseClauseList -> ExprCaseClauseList ExprCaseClause
Rule 104   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 105   ExprSwitchCase -> CASE ExpressionList
Rule 106   ExprSwitchCase -> DEFAULT
Rule 107   ExprSwitchCase -> CASE Expression
Rule 108   ForStmt -> FOR ForStmt_1 Block
Rule 109   ForStmt_1 -> Condition
Rule 110   ForStmt_1 -> ForClause
Rule 111   ForStmt_1 -> RangeClause
Rule 112   ForStmt_1 -> <empty>
Rule 113   Condition -> Expression
Rule 114   ForClause -> ForClause_1 SEMICOLON ForClause_2 SEMICOLON ForClause_3
Rule 115   ForClause_1 -> SimpleStmt
Rule 116   ForClause_2 -> Condition
Rule 117   ForClause_2 -> <empty>
Rule 118   ForClause_3 -> SimpleStmt
Rule 119   RangeClause -> RangeClause_1 RANGE Expression
Rule 120   RangeClause_1 -> ExpressionList ASSIGN
Rule 121   RangeClause_1 -> IdentifierList DEFINE
Rule 122   RangeClause_1 -> <empty>
Rule 123   GotoStmt -> GOTO Label
Rule 124   SelectStmt -> SELECT LBRACE RBRACE
Rule 125   SelectStmt -> SELECT LBRACE CommClause RBRACE
Rule 126   CommClause -> CommCase COLON StatementList
Rule 127   CommCase -> CASE SendStmt
Rule 128   CommCase -> DEFAULT
Rule 129   CommCase -> CASE RecvStmt
Rule 130   RecvStmt -> ExpressionList ASSIGN Expression
Rule 131   RecvStmt -> Expression
Rule 132   RecvStmt -> IdentifierList DEFINE Expression
Rule 133   SendStmt -> Channel ARROW Expression
Rule 134   Channel -> Expression
Rule 135   Label -> ID
Rule 136   TypeDecl -> TYPE TypeSpec
Rule 137   TypeSpec -> ID Type
Rule 138   MapType -> MAP LBRACK Type RBRACK Type
Rule 139   StructType -> STRUCT LBRACE FieldDeclList RBRACE
Rule 140   StructType -> STRUCT SEMICOLON FieldDeclList RBRACE
Rule 141   StructType -> STRUCT LBRACE RBRACE
Rule 142   StructType -> STRUCT SEMICOLON RBRACE
Rule 143   FieldDeclList -> FieldDecl SEMICOLON
Rule 144   FieldDeclList -> FieldDeclList FieldDecl SEMICOLON
Rule 145   FieldDecl -> IdentifierList Type STRING
Rule 146   FieldDecl -> IdentifierList Type
Rule 147   PointerType -> MUL Type
Rule 148   ArrayType -> LBRACK Expression RBRACK Type
Rule 149   Literal -> BasicLit
Rule 150   Literal -> FunctionLit
Rule 151   Literal -> CompositeLit
Rule 152   BasicLit -> INT
Rule 153   BasicLit -> FLOAT
Rule 154   BasicLit -> STRING
Rule 155   BasicLit -> IMAG
Rule 156   FunctionLit -> FUNC Signature Block
Rule 157   CompositeLit -> LiteralType LiteralValue
Rule 158   LiteralType -> StructType
Rule 159   LiteralType -> ArrayType
Rule 160   LiteralType -> PointerType
Rule 161   LiteralType -> SliceType
Rule 162   LiteralType -> InterfaceType
Rule 163   LiteralType -> MapType
Rule 164   InterfaceType -> INTERFACE LBRACE RBRACE
Rule 165   InterfaceType -> INTERFACE LBRACE ID Signature SEMICOLON RBRACE
Rule 166   InterfaceType -> INTERFACE LBRACE ID SEMICOLON RBRACE
Rule 167   InterfaceType -> INTERFACE LBRACE ID PERIOD ID SEMICOLON RBRACE
Rule 168   LiteralValue -> LBRACE RBRACE
Rule 169   LiteralValue -> LBRACE ElementList RBRACE
Rule 170   LiteralValue -> LBRACE ElementList COMMA RBRACE
Rule 171   LiteralValue -> SEMICOLON RBRACE
Rule 172   LiteralValue -> SEMICOLON ElementList COMMA RBRACE
Rule 173   LiteralValue -> SEMICOLON ElementList RBRACE
Rule 174   ElementList -> KeyedElement
Rule 175   ElementList -> ElementList COMMA KeyedElement
Rule 176   KeyedElement -> Element
Rule 177   KeyedElement -> Key COLON Element
Rule 178   Key -> Expression
Rule 179   Key -> LiteralValue
Rule 180   Element -> Expression
Rule 181   Element -> LiteralValue
Rule 182   Expression -> Expression1
Rule 183   Expression -> UnaryExpr assign_op Expression
Rule 184   Expression1 -> Expression2
Rule 185   Expression1 -> Expression1 LOR Expression2
Rule 186   Expression2 -> Expression3
Rule 187   Expression2 -> Expression2 LAND Expression3
Rule 188   Expression3 -> Expression4
Rule 189   Expression3 -> Expression3 rel_op Expression4
Rule 190   Expression4 -> Expression5
Rule 191   Expression4 -> Expression4 add_op Expression5
Rule 192   Expression5 -> UnaryExpr
Rule 193   Expression5 -> Expression5 mul_op UnaryExpr
Rule 194   UnaryExpr -> PrimaryExpr
Rule 195   UnaryExpr -> unary_op UnaryExpr
Rule 196   rel_op -> EQL
Rule 197   rel_op -> NEQ
Rule 198   rel_op -> LSS
Rule 199   rel_op -> LEQ
Rule 200   rel_op -> GTR
Rule 201   rel_op -> GEQ
Rule 202   add_op -> ADD
Rule 203   add_op -> SUB
Rule 204   add_op -> OR
Rule 205   add_op -> XOR
Rule 206   mul_op -> MUL
Rule 207   mul_op -> QUO
Rule 208   mul_op -> REM
Rule 209   mul_op -> SHL
Rule 210   mul_op -> SHR
Rule 211   mul_op -> AND
Rule 212   mul_op -> AND_NOT
Rule 213   unary_op -> ADD
Rule 214   unary_op -> SUB
Rule 215   unary_op -> NOT
Rule 216   unary_op -> XOR
Rule 217   unary_op -> MUL
Rule 218   unary_op -> AND
Rule 219   unary_op -> ARROW
Rule 220   assign_op -> ASSIGN
Rule 221   assign_op -> ADD_ASSIGN
Rule 222   assign_op -> SUB_ASSIGN
Rule 223   assign_op -> MUL_ASSIGN
Rule 224   assign_op -> QUO_ASSIGN
Rule 225   assign_op -> REM_ASSIGN
Rule 226   assign_op -> AND_ASSIGN
Rule 227   assign_op -> OR_ASSIGN
Rule 228   assign_op -> XOR_ASSIGN
Rule 229   assign_op -> SHL_ASSIGN
Rule 230   assign_op -> SHR_ASSIGN
Rule 231   assign_op -> AND_NOT_ASSIGN
Rule 232   PrimaryExpr -> Literal
Rule 233   PrimaryExpr -> ID
Rule 234   PrimaryExpr -> LPAREN Expression RPAREN
Rule 235   PrimaryExpr -> ID LiteralValue
Rule 236   PrimaryExpr -> PrimaryExpr Selector
Rule 237   PrimaryExpr -> PrimaryExpr Index
Rule 238   PrimaryExpr -> PrimaryExpr Slice
Rule 239   PrimaryExpr -> PrimaryExpr TypeAssertion
Rule 240   PrimaryExpr -> PrimaryExpr Arguments
Rule 241   PrimaryExpr -> ID StructLiteral
Rule 242   StructLiteral -> LBRACE KeyValList RBRACE
Rule 243   KeyValList -> <empty>
Rule 244   KeyValList -> Expression COLON Expression
Rule 245   KeyValList -> Expression COLON Expression COMMA KeyValList
Rule 246   Selector -> PERIOD ID
Rule 247   Index -> LBRACK Expression RBRACK
Rule 248   Slice -> LBRACK COLON RBRACK
Rule 249   Slice -> LBRACK COLON Expression RBRACK
Rule 250   Slice -> LBRACK Expression COLON RBRACK
Rule 251   Slice -> LBRACK Expression COLON Expression RBRACK
Rule 252   Slice -> LBRACK COLON Expression COLON Expression RBRACK
Rule 253   Slice -> LBRACK Expression COLON Expression COLON Expression RBRACK
Rule 254   TypeAssertion -> PERIOD LPAREN Type RPAREN
Rule 255   Arguments -> LPAREN RPAREN
Rule 256   Arguments -> LPAREN ExpressionList RPAREN
Rule 257   Arguments -> LPAREN ExpressionList ELLIPSIS RPAREN
Rule 258   ExpressionList -> Expression
Rule 259   ExpressionList -> ExpressionList COMMA Expression

Terminals, with rules where they appear

ADD                  : 202 213
ADD_ASSIGN           : 221
AND                  : 211 218
AND_ASSIGN           : 226
AND_NOT              : 212
AND_NOT_ASSIGN       : 231
ARROW                : 133 219
ASSIGN               : 120 130 220
BREAK                : 87 88
CASE                 : 105 107 127 129
CHAN                 : 
COLON                : 84 104 126 177 244 245 248 249 250 251 252 252 253 253
COM                  : 
COMMA                : 63 65 70 170 172 175 245 259
COND                 : 
CONST                : 
CONTINUE             : 89 90
DEC                  : 47
DEFAULT              : 106 128
DEFER                : 36
DEFINE               : 48 121 132
ELLIPSIS             : 67 68 257
ELSE                 : 93 94 95 96
EQL                  : 196
FALLTHROUGH          : 
FLOAT                : 153
FOR                  : 108
FUNC                 : 55 56 71 72 156
GEQ                  : 201
GO                   : 45
GOTO                 : 123
GTR                  : 200
ID                   : 3 11 55 56 69 70 71 72 77 78 78 84 88 90 135 137 165 166 167 167 233 235 241 246
IF                   : 91 92 93 94 95 96
IMAG                 : 155
IMPORT               : 6 7 8
INC                  : 46
INT                  : 152
INTERFACE            : 164 165 166 167
LAND                 : 187
LBRACE               : 15 100 101 124 125 139 141 164 165 166 167 168 169 170 242
LBRACK               : 80 138 148 247 248 249 250 251 252 253
LEQ                  : 199
LOR                  : 185
LPAREN               : 6 7 61 62 63 234 254 255 256 257
LSS                  : 198
MAP                  : 138
MUL                  : 147 206 217
MUL_ASSIGN           : 223
NEQ                  : 197
NOT                  : 215
OR                   : 204
OR_ASSIGN            : 227
PACKAGE              : 3
PERIOD               : 12 78 167 246 254
QUO                  : 207
QUO_ASSIGN           : 224
RANGE                : 119
RBRACE               : 15 100 101 124 125 139 140 141 142 164 165 166 167 168 169 170 171 172 173 242
RBRACK               : 80 138 148 247 248 249 250 251 252 253
REM                  : 208
REM_ASSIGN           : 225
RETURN               : 85 86
RPAREN               : 6 7 61 62 63 234 254 255 256 257
SELECT               : 124 125
SEMICOLON            : 1 2 4 5 9 10 20 21 74 75 92 95 96 100 114 114 140 142 143 144 165 166 167 171 172 173
SHL                  : 209
SHL_ASSIGN           : 229
SHR                  : 210
SHR_ASSIGN           : 230
STRING               : 14 145 154
STRUCT               : 139 140 141 142
SUB                  : 203 214
SUB_ASSIGN           : 222
SWITCH               : 100 101
TYPE                 : 136
VAR                  : 49
VARTYPE              : 79
XOR                  : 205 216
XOR_ASSIGN           : 228
error                : 

Nonterminals, with rules where they appear

Arguments            : 240
ArrayType            : 159
Assignment           : 41
BasicLit             : 149
Block                : 30 56 72 91 92 93 93 94 95 96 96 108 156
BreakStmt            : 27
BrkBlk               : 
BrkBlkEnd            : 
CLOSEB               : 15 55 56 91 92 93 94 95 96
Channel              : 133
CommCase             : 126
CommClause           : 125
CompositeLit         : 151
Condition            : 109 116
ContinueStmt         : 28
Declaration          : 22 81
DeferStmt            : 23
Element              : 176 177
ElementList          : 169 170 172 173 175
Empty                : 
EmptyExpr            : 
EmptyStmt            : 37
ExprCaseClause       : 103
ExprCaseClauseList   : 100 101 103
ExprSwitchCase       : 104
ExprSwitchStmt       : 99
Expression           : 36 44 45 46 47 91 92 93 94 95 96 100 101 107 113 119 130 131 132 133 134 148 178 180 183 234 244 244 245 245 247 249 250 251 251 252 252 253 253 253 258 259
Expression1          : 182 185
Expression2          : 184 185 187
Expression3          : 186 187 189
Expression4          : 188 189 191
Expression5          : 190 191 193
ExpressionList       : 42 42 48 51 52 86 105 120 130 256 257 259
ExpressionStmt       : 38
FieldDecl            : 143 144
FieldDeclList        : 139 140 144
ForClause            : 110
ForClause_1          : 114
ForClause_2          : 114
ForClause_3          : 114
ForStmt              : 35
ForStmt_1            : 108
FunctionDecl         : 82
FunctionLit          : 150
GoStmt               : 31
GotoStmt             : 29
IdentifierList       : 48 50 51 52 66 67 70 121 132 145 146
IfStmt               : 32 94 95
ImportDecl           : 4 5
ImportDeclList       : 1 4
ImportPath           : 11 12 13
ImportSpec           : 8 9 10
ImportSpecList       : 6 9
IncDecStmt           : 39
Index                : 237
InterfaceType        : 162
Key                  : 177
KeyValList           : 242 245
KeyedElement         : 174 175
Label                : 123
LabeledStmt          : 24
Literal              : 232
LiteralType          : 76 157
LiteralValue         : 157 179 181 235
MapType              : 163
MethodDecl           : 83
OPENB                : 15 55 56 91 92 93 94 95 96
PackageClause        : 1 2
ParameterDecl        : 64 65
ParameterList        : 62 63 65
Parameters           : 57 58 59 73
PointerType          : 160
PrimaryExpr          : 194 236 237 238 239 240
RangeClause          : 111
RangeClause_1        : 119
Receiver             : 71 72
RecvStmt             : 129
Result               : 58
ReturnStmt           : 26
SelectStmt           : 33
Selector             : 236
SendStmt             : 127
ShortVarDecl         : 40
Signature            : 55 56 71 72 156 165
SimpleStmt           : 25 92 95 96 100 115 118
Slice                : 238
SliceType            : 161
SourceFile           : 0
Statement            : 20 21 84
StatementList        : 15 20 104 126
StructLiteral        : 241
StructType           : 158
SwitchStmt           : 34
TopLevelDecl         : 74 75
TopLevelDeclList     : 1 2 74
Type                 : 50 51 60 66 67 68 80 137 138 138 145 146 147 148 254
TypeAssertion        : 239
TypeDecl             : 53
TypeSpec             : 136
UnaryExpr            : 183 192 193 195
VarDecl              : 54
VarSpec              : 49
add_op               : 191
assign_op            : 42 51 52 183
mul_op               : 193
rel_op               : 189
unary_op             : 195

Parsing method: LALR

state 0

    (0) S' -> . SourceFile
    (1) SourceFile -> . PackageClause SEMICOLON ImportDeclList TopLevelDeclList
    (2) SourceFile -> . PackageClause SEMICOLON TopLevelDeclList
    (3) PackageClause -> . PACKAGE ID

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 3

state 1

    (1) SourceFile -> PackageClause . SEMICOLON ImportDeclList TopLevelDeclList
    (2) SourceFile -> PackageClause . SEMICOLON TopLevelDeclList

    SEMICOLON       shift and go to state 4


state 2

    (3) PackageClause -> PACKAGE . ID

    ID              shift and go to state 5


state 3

    (0) S' -> SourceFile .



state 4

    (1) SourceFile -> PackageClause SEMICOLON . ImportDeclList TopLevelDeclList
    (2) SourceFile -> PackageClause SEMICOLON . TopLevelDeclList
    (4) ImportDeclList -> . ImportDeclList ImportDecl SEMICOLON
    (5) ImportDeclList -> . ImportDecl SEMICOLON
    (74) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl SEMICOLON
    (75) TopLevelDeclList -> . TopLevelDecl SEMICOLON
    (6) ImportDecl -> . IMPORT LPAREN ImportSpecList RPAREN
    (7) ImportDecl -> . IMPORT LPAREN RPAREN
    (8) ImportDecl -> . IMPORT ImportSpec
    (81) TopLevelDecl -> . Declaration
    (82) TopLevelDecl -> . FunctionDecl
    (83) TopLevelDecl -> . MethodDecl
    (53) Declaration -> . TypeDecl
    (54) Declaration -> . VarDecl
    (55) FunctionDecl -> . FUNC ID OPENB Signature CLOSEB
    (56) FunctionDecl -> . FUNC ID OPENB Signature Block CLOSEB
    (71) MethodDecl -> . FUNC Receiver ID Signature
    (72) MethodDecl -> . FUNC Receiver ID Signature Block
    (136) TypeDecl -> . TYPE TypeSpec
    (49) VarDecl -> . VAR VarSpec

    IMPORT          shift and go to state 11
    FUNC            shift and go to state 14
    TYPE            shift and go to state 18
    VAR             shift and go to state 15

    MethodDecl                     shift and go to state 16
    TypeDecl                       shift and go to state 12
    VarDecl                        shift and go to state 17
    FunctionDecl                   shift and go to state 6
    TopLevelDecl                   shift and go to state 7
    ImportDeclList                 shift and go to state 13
    Declaration                    shift and go to state 10
    ImportDecl                     shift and go to state 8
    TopLevelDeclList               shift and go to state 9

state 5

    (3) PackageClause -> PACKAGE ID .

    SEMICOLON       reduce using rule 3 (PackageClause -> PACKAGE ID .)


state 6

    (82) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 82 (TopLevelDecl -> FunctionDecl .)


state 7

    (75) TopLevelDeclList -> TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 19


state 8

    (5) ImportDeclList -> ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 20


state 9

    (2) SourceFile -> PackageClause SEMICOLON TopLevelDeclList .
    (74) TopLevelDeclList -> TopLevelDeclList . TopLevelDecl SEMICOLON
    (81) TopLevelDecl -> . Declaration
    (82) TopLevelDecl -> . FunctionDecl
    (83) TopLevelDecl -> . MethodDecl
    (53) Declaration -> . TypeDecl
    (54) Declaration -> . VarDecl
    (55) FunctionDecl -> . FUNC ID OPENB Signature CLOSEB
    (56) FunctionDecl -> . FUNC ID OPENB Signature Block CLOSEB
    (71) MethodDecl -> . FUNC Receiver ID Signature
    (72) MethodDecl -> . FUNC Receiver ID Signature Block
    (136) TypeDecl -> . TYPE TypeSpec
    (49) VarDecl -> . VAR VarSpec

    $end            reduce using rule 2 (SourceFile -> PackageClause SEMICOLON TopLevelDeclList .)
    FUNC            shift and go to state 14
    TYPE            shift and go to state 18
    VAR             shift and go to state 15

    MethodDecl                     shift and go to state 16
    TypeDecl                       shift and go to state 12
    VarDecl                        shift and go to state 17
    FunctionDecl                   shift and go to state 6
    TopLevelDecl                   shift and go to state 21
    Declaration                    shift and go to state 10

state 10

    (81) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 81 (TopLevelDecl -> Declaration .)


state 11

    (6) ImportDecl -> IMPORT . LPAREN ImportSpecList RPAREN
    (7) ImportDecl -> IMPORT . LPAREN RPAREN
    (8) ImportDecl -> IMPORT . ImportSpec
    (11) ImportSpec -> . ID ImportPath
    (12) ImportSpec -> . PERIOD ImportPath
    (13) ImportSpec -> . ImportPath
    (14) ImportPath -> . STRING

    LPAREN          shift and go to state 26
    ID              shift and go to state 27
    PERIOD          shift and go to state 24
    STRING          shift and go to state 22

    ImportSpec                     shift and go to state 23
    ImportPath                     shift and go to state 25

state 12

    (53) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 53 (Declaration -> TypeDecl .)


state 13

    (1) SourceFile -> PackageClause SEMICOLON ImportDeclList . TopLevelDeclList
    (4) ImportDeclList -> ImportDeclList . ImportDecl SEMICOLON
    (74) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl SEMICOLON
    (75) TopLevelDeclList -> . TopLevelDecl SEMICOLON
    (6) ImportDecl -> . IMPORT LPAREN ImportSpecList RPAREN
    (7) ImportDecl -> . IMPORT LPAREN RPAREN
    (8) ImportDecl -> . IMPORT ImportSpec
    (81) TopLevelDecl -> . Declaration
    (82) TopLevelDecl -> . FunctionDecl
    (83) TopLevelDecl -> . MethodDecl
    (53) Declaration -> . TypeDecl
    (54) Declaration -> . VarDecl
    (55) FunctionDecl -> . FUNC ID OPENB Signature CLOSEB
    (56) FunctionDecl -> . FUNC ID OPENB Signature Block CLOSEB
    (71) MethodDecl -> . FUNC Receiver ID Signature
    (72) MethodDecl -> . FUNC Receiver ID Signature Block
    (136) TypeDecl -> . TYPE TypeSpec
    (49) VarDecl -> . VAR VarSpec

    IMPORT          shift and go to state 11
    FUNC            shift and go to state 14
    TYPE            shift and go to state 18
    VAR             shift and go to state 15

    MethodDecl                     shift and go to state 16
    TypeDecl                       shift and go to state 12
    VarDecl                        shift and go to state 17
    FunctionDecl                   shift and go to state 6
    TopLevelDecl                   shift and go to state 7
    Declaration                    shift and go to state 10
    ImportDecl                     shift and go to state 28
    TopLevelDeclList               shift and go to state 29

state 14

    (55) FunctionDecl -> FUNC . ID OPENB Signature CLOSEB
    (56) FunctionDecl -> FUNC . ID OPENB Signature Block CLOSEB
    (71) MethodDecl -> FUNC . Receiver ID Signature
    (72) MethodDecl -> FUNC . Receiver ID Signature Block
    (73) Receiver -> . Parameters
    (61) Parameters -> . LPAREN RPAREN
    (62) Parameters -> . LPAREN ParameterList RPAREN
    (63) Parameters -> . LPAREN ParameterList COMMA RPAREN

    ID              shift and go to state 33
    LPAREN          shift and go to state 30

    Parameters                     shift and go to state 31
    Receiver                       shift and go to state 32

state 15

    (49) VarDecl -> VAR . VarSpec
    (50) VarSpec -> . IdentifierList Type
    (51) VarSpec -> . IdentifierList Type assign_op ExpressionList
    (52) VarSpec -> . IdentifierList assign_op ExpressionList
    (69) IdentifierList -> . ID
    (70) IdentifierList -> . IdentifierList COMMA ID

    ID              shift and go to state 36

    VarSpec                        shift and go to state 34
    IdentifierList                 shift and go to state 35

state 16

    (83) TopLevelDecl -> MethodDecl .

    SEMICOLON       reduce using rule 83 (TopLevelDecl -> MethodDecl .)


state 17

    (54) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 54 (Declaration -> VarDecl .)


state 18

    (136) TypeDecl -> TYPE . TypeSpec
    (137) TypeSpec -> . ID Type

    ID              shift and go to state 38

    TypeSpec                       shift and go to state 37

state 19

    (75) TopLevelDeclList -> TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 75 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 75 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 75 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    $end            reduce using rule 75 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)


state 20

    (5) ImportDeclList -> ImportDecl SEMICOLON .

    IMPORT          reduce using rule 5 (ImportDeclList -> ImportDecl SEMICOLON .)
    FUNC            reduce using rule 5 (ImportDeclList -> ImportDecl SEMICOLON .)
    TYPE            reduce using rule 5 (ImportDeclList -> ImportDecl SEMICOLON .)
    VAR             reduce using rule 5 (ImportDeclList -> ImportDecl SEMICOLON .)


state 21

    (74) TopLevelDeclList -> TopLevelDeclList TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 39


state 22

    (14) ImportPath -> STRING .

    SEMICOLON       reduce using rule 14 (ImportPath -> STRING .)


state 23

    (8) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 8 (ImportDecl -> IMPORT ImportSpec .)


state 24

    (12) ImportSpec -> PERIOD . ImportPath
    (14) ImportPath -> . STRING

    STRING          shift and go to state 22

    ImportPath                     shift and go to state 40

state 25

    (13) ImportSpec -> ImportPath .

    SEMICOLON       reduce using rule 13 (ImportSpec -> ImportPath .)


state 26

    (6) ImportDecl -> IMPORT LPAREN . ImportSpecList RPAREN
    (7) ImportDecl -> IMPORT LPAREN . RPAREN
    (9) ImportSpecList -> . ImportSpecList ImportSpec SEMICOLON
    (10) ImportSpecList -> . ImportSpec SEMICOLON
    (11) ImportSpec -> . ID ImportPath
    (12) ImportSpec -> . PERIOD ImportPath
    (13) ImportSpec -> . ImportPath
    (14) ImportPath -> . STRING

    RPAREN          shift and go to state 41
    ID              shift and go to state 27
    PERIOD          shift and go to state 24
    STRING          shift and go to state 22

    ImportSpecList                 shift and go to state 43
    ImportSpec                     shift and go to state 42
    ImportPath                     shift and go to state 25

state 27

    (11) ImportSpec -> ID . ImportPath
    (14) ImportPath -> . STRING

    STRING          shift and go to state 22

    ImportPath                     shift and go to state 44

state 28

    (4) ImportDeclList -> ImportDeclList ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 45


state 29

    (1) SourceFile -> PackageClause SEMICOLON ImportDeclList TopLevelDeclList .
    (74) TopLevelDeclList -> TopLevelDeclList . TopLevelDecl SEMICOLON
    (81) TopLevelDecl -> . Declaration
    (82) TopLevelDecl -> . FunctionDecl
    (83) TopLevelDecl -> . MethodDecl
    (53) Declaration -> . TypeDecl
    (54) Declaration -> . VarDecl
    (55) FunctionDecl -> . FUNC ID OPENB Signature CLOSEB
    (56) FunctionDecl -> . FUNC ID OPENB Signature Block CLOSEB
    (71) MethodDecl -> . FUNC Receiver ID Signature
    (72) MethodDecl -> . FUNC Receiver ID Signature Block
    (136) TypeDecl -> . TYPE TypeSpec
    (49) VarDecl -> . VAR VarSpec

    $end            reduce using rule 1 (SourceFile -> PackageClause SEMICOLON ImportDeclList TopLevelDeclList .)
    FUNC            shift and go to state 14
    TYPE            shift and go to state 18
    VAR             shift and go to state 15

    MethodDecl                     shift and go to state 16
    TypeDecl                       shift and go to state 12
    VarDecl                        shift and go to state 17
    FunctionDecl                   shift and go to state 6
    TopLevelDecl                   shift and go to state 21
    Declaration                    shift and go to state 10

state 30

    (61) Parameters -> LPAREN . RPAREN
    (62) Parameters -> LPAREN . ParameterList RPAREN
    (63) Parameters -> LPAREN . ParameterList COMMA RPAREN
    (64) ParameterList -> . ParameterDecl
    (65) ParameterList -> . ParameterList COMMA ParameterDecl
    (66) ParameterDecl -> . IdentifierList Type
    (67) ParameterDecl -> . IdentifierList ELLIPSIS Type
    (68) ParameterDecl -> . ELLIPSIS Type
    (69) IdentifierList -> . ID
    (70) IdentifierList -> . IdentifierList COMMA ID
